--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -81,7 +81,7 @@ in partial fulfillment of the requirements for the degree of
 
 Master of Science \\
 in \\
-Electical Engineering
+Electrical Engineering
 
 \vfill
 
